Prevent scrolling on mobile for on-volca keyboard

--- a/app/assets/stylesheets/emulator.scss
+++ b/app/assets/stylesheets/emulator.scss
@@ -243,6 +243,8 @@
     top: 58.4%;
     left: 5%;
     z-index: 40;
+    touch-action: none;
+    overscroll-behavior: contain;
 
     .key {
       user-drag: none;
